--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,12 @@
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
 }
 
-
-.hero-text {
-    background-color: #1f2937;
-    color: #f9faf8;
-    font-size: 48px;
-    font-weight: bolder;
+.top-portion {
+    display: flex;
+    flex-flow: column wrap;
 }
 
 .header {
@@ -17,6 +15,18 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 100px;
+    flex-flow: row wrap;
+    padding: 25px;
+    align-content: space-between;
+    
+}
+
+.hero-text {
+    background-color: #1f2937;
+    color: #f9faf8;
+    font-size: 48px;
+    font-weight: bolder;
 }
 
 .links {
@@ -29,6 +39,46 @@ body {
     color: #f9faf8;
     font-size: 24px;
     font-weight: bold;
+}
+
+
+.hero-section {
+    display: flex;
+    flex-flow: column wrap;
+    background-color: #1f2937;
+}
+
+.hero-paragraph {
+    display: flex;
+    color: white;
+}
+
+.hero-button {
+    display: flex;
+    width: 80px;
+    height: 25px;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(45, 131, 237, 0.721);
+    color: white;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    font: inherit;
+    font-size: 15px;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+.image {
+    display: flex;
+    border: 1px solid green ;
+    width: 300px;
+    height: 150px;
+    justify-content: center;
+    align-items: center;
+    color: #E5E7EB;
+    background-color: grey;
 }
 
 a {
