--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,8 @@ body {
     color: #f9faf8;
     font-size: 48px;
     font-weight: bolder;
+    display: flex;
+    flex-flow: row;
 }
 
 .links {
@@ -49,8 +51,6 @@ body {
     font-size: 24px;
     font-weight: bold;
 }
-
-
 
 
 .hero-paragraph {
@@ -78,8 +78,8 @@ body {
 .image {
     display: flex;
     border: 1px solid green ;
-    width: 300px;
-    height: 150px;
+    width: 400px;
+    height: 180px;
     justify-content: center;
     align-items: center;
     color: #E5E7EB;
@@ -87,10 +87,12 @@ body {
 }
 
 .square {
-    border: 1px solid blue;
+    border: 2px solid rgb(62, 123, 255);
     width: 100px;
     height: 100px;
     display: flex;
+    flex: 0 0 100px;
+    border-radius: 10px;
 }
 
 .square-one-text {
@@ -99,12 +101,35 @@ body {
 }
 
 
-
 a {
     text-decoration: none;
     color: #E5E7EB;
     font-size: 18px;
    
+}
+
+.subtext-section {
+    display: flex;
+    flex-flow: column nowrap;
+    height: 500px;
+}
+
+.subtext-title {
+    display: flex;
+    font-size: 25px;
+    font-weight: bold;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+}
+
+
+
+.grey-section {
+    display: flex;
+    height: 500px;
+    background-color: grey;
+    
 }
 
 
