--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 10px;
     display: flex;
     flex-flow:column nowrap;
     justify-content: center;
@@ -11,11 +10,19 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #1F2937;
+    padding: 10px;
+   
 }
 .header-logo {
     font-weight: bold;
+    color: #f9faf8;
+    font-size: 48px;
+    font-weight: bolder;
 }
 .header-link-section {
     display: flex;
     gap: 20px;
+    color: #e5e7eb;
+    font-size: 18px;
 }
