--- a/styles.css
+++ b/styles.css
@@ -6,18 +6,20 @@ body {
     justify-content: center;
 }
 
+/* header area */
 .header-section {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #1F2937;
     padding: 10px;
+    margin-bottom: 80px;
    
 }
 .header-logo {
     font-weight: bold;
     color: #f9faf8;
-    font-size: 48px;
+    font-size: 24px;
     font-weight: bolder;
 }
 .header-link-section {
@@ -25,4 +27,49 @@ body {
     gap: 20px;
     color: #e5e7eb;
     font-size: 18px;
+}
+/* end of header area */
+
+.hero-section {
+    display: flex;
+    background-color: #1F2937;
+}
+
+.hero-container {
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+.hero-title {
+    color: #f9faf8;
+    font-size: 48px;
+}
+
+.hero-subtext {
+    color: #e5e7eb;
+}
+
+.hero-image {
+    display: flex;
+    flex: 0 1 auto;
+    outline: grey;
+    width: 500px;
+    height: 150px;
+    background-color: grey;
+    color: white;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+
+
+
+
+/* universal stuff */
+
+a {
+    text-decoration: none;
+    color: #e5e7eb;
 }
