--- a/styles.css
+++ b/styles.css
@@ -63,9 +63,17 @@ ul {
     background-color: #1f2937;
 }
 
+.header .container {
+    display: flex;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
 .header-text {
     display: flex;
     flex-flow: column nowrap;
+    width: 500px;
+    gap: 10px;
 }
 
 .header-text button {
@@ -82,6 +90,16 @@ ul {
     border: 1px solid grey;
     font-size: 15px;
     font-weight: bold;
+}
+
+.placeholder-image {
+    display: flex;
+    background-color: grey;
+    width: 400px;
+    height: 200px;
+    justify-content: center;
+    align-items: center;
+    color: white;
 }
 
 .container h1 {
