--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@ ul {
     justify-content: center;
     align-items: center;
     color: white;
+    flex: 1 0 400px;
 }
 
 .container h1 {
@@ -110,7 +111,7 @@ ul {
 }
 
 .container p {
-    font-size: 24px;
+    font-size: 20px;
     color: #F9FAF8;
 }
 
@@ -157,4 +158,35 @@ ul {
     font-size: 15px;
     width: 145px;
     text-align: center;
+}
+
+.quote {
+    background-color: #e5e7eb;    
+    margin-top: 50px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote .container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.quote p {
+    font-style: italic;
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: lighter;
+    width: 800px;
+}
+
+.quote .thor {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 25px;
+    display: flex;
+    justify-content: flex-end;
 }
